# vqlayer

./: .travis.yml  CMakeLists.txt  Config_amz.conf  README.md  config.h  layer.h  main.cc  network.cpp  network.h  operand.h  operator.h  xml_data.h
app/: main.cc
config/: amazon.cfg  delicious200k.cfg  kdd12.cfg  mnist.cfg  rcv1.cfg  rcv1x.cfg  wiki10.cfg
data/: README.md
include/: layer.h  layer_abstract.h  layer_cpq.h  layer_hash.h  layer_interface.h  layer_pq.h  layer_rq.h  layer_standard.h  loss.h  network.h  progress_bar.h  tensor.h  timer.h  util.h  vq.h
src/: abslayer.cc  layer.cc  loss.cc  network.cc  network.cpp  pqlayer.cc  rqlayer.cc  vq.cc  vqlayer.cc
test/: test.h  test_cpqlayer.cc  test_hashlayer.cc  test_pqlayer.cc  test_rqlayer.cc  test_selector.cc  test_smm.cc  test_smm.py  test_vq.cc  test_vq.py
